--- a/galactic_react/package.json
+++ b/galactic_react/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "styled-components": "^4.2.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
